Implemented 'categories add' row and 'categories' table

--- a/ClientApp/src/app/categories/add/add.component.html
+++ b/ClientApp/src/app/categories/add/add.component.html
@@ -3,10 +3,10 @@
         <h2>Add new Category</h2>
     </mat-card-title>
     <mat-card-content>
-        <form>
+        <form [formGroup]="form" (ngSubmit)="onSubmit()">
             <mat-form-field appearance="standard">
                 <mat-label>Category</mat-label>
-                <input type="text" matInput placeholder="Category name...">
+                <input formControlName="name" type="text" matInput placeholder="Category name...">
             </mat-form-field>
             <button mat-flat-button color="primary">Add</button>
         </form>
