Updated layout. Added tabs and sidebar. Added base layout for images component

--- a/ClientApp/src/app/layouts/admin-layout/admin-layout.component.html
+++ b/ClientApp/src/app/layouts/admin-layout/admin-layout.component.html
@@ -1,4 +1,7 @@
 <app-nav-menu></app-nav-menu>
-<div>
-    <router-outlet></router-outlet>
-</div>
+<main>
+    <app-sidenav></app-sidenav>
+    <div class="central-view">
+        <router-outlet></router-outlet>
+    </div>
+</main>
