--- a/ClientApp/src/app/layouts/sidenav/sidenav.component.html
+++ b/ClientApp/src/app/layouts/sidenav/sidenav.component.html
@@ -1,7 +1,7 @@
 <div class="side-nav">
     <div class="links">
-        <a routerLink="auth/logout">Logout</a>
         <a routerLink="/categories">Categories</a>
         <a routerLink="/images">Images</a>
+        <a (click)="logout()">Logout</a>
     </div>
 </div>
