--- a/ClientApp/src/app/images/add/add.component.html
+++ b/ClientApp/src/app/images/add/add.component.html
@@ -1,1 +1,21 @@
-<p>add works!</p>
+<form >
+    <h2>Add new image</h2>
+    <div>
+        <mat-form-field appearance="standard">
+            <mat-label>Name</mat-label>
+            <input matInput placeholder="Name"/>
+        </mat-form-field>
+    </div>
+    <div>
+        <mat-label>File</mat-label>
+        <input type="file" />
+    </div>
+    <div>
+        <mat-form-field>
+            <mat-label>Category</mat-label>
+            <mat-select>
+                
+            </mat-select>
+        </mat-form-field>
+    </div>
+</form>
