--- a/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,7 +1,7 @@
 <header>
   <nav class="box-shadow">
-    <div class="link">
-      <a class="brand" [routerLink]="['/']">Soosle</a>
+    <div class="logo">
+      <a class="brand" [routerLink]="['/']">sO.Osle</a>
     </div>
   </nav>
 </header>
