--- a/ClientApp/src/app/nav-menu/nav-menu.component.scss
+++ b/ClientApp/src/app/nav-menu/nav-menu.component.scss
@@ -1,8 +1,17 @@
-.link {
+header {
+  border-bottom: 2px solid rgba(211,211,211,0.6);
+  z-index: 5;
+}
+
+.logo {
   width: 10%;
   margin-left:5%;
   a {
     font-size:28px;
+    padding:10px;
+    display: block;
     text-decoration: none;
+    color:#2ecc71;
+    font-weight: bold;
   }
 }
